--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,20 +131,20 @@ jobs:
       #   with:
       #     image-tag: v24.1.0
 
-      - name: Generate API for v242
+      - name: Generate API for v242 (SP5)
         uses: ./.github/actions/generate-api
         with:
-          image-tag: v24.2.0
+          image-tag: v24.2.0-sp05
 
-      - name: Generate API for v251
+      - name: Generate API for v251 (SP4)
         uses: ./.github/actions/generate-api
         with:
-          image-tag: v25.1.0
+          image-tag: v25.1.0-sp04
 
-      - name: Generate API for v252
+      - name: Generate API for v252 (SP3)
         uses: ./.github/actions/generate-api
         with:
-          image-tag: v25.2.0
+          image-tag: v25.2.0-sp03
 
       #- name: Generate API for latest
       #  uses: ./.github/actions/generate-api
