--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,20 +117,20 @@ jobs:
           username: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
           password: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
-      # - name: Generate API for v231
-      #   uses: ./.github/actions/generate-api
-      #   with:
-      #     image-tag: v23.1.0
+      - name: Generate API for v231
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v23.1.0
 
-      # - name: Generate API for v232
-      #   uses: ./.github/actions/generate-api
-      #   with:
-      #     image-tag: v23.2.0
+      - name: Generate API for v232
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v23.2.0
 
-      # - name: Generate API for v241
-      #   uses: ./.github/actions/generate-api
-      #   with:
-      #     image-tag: v24.1.0
+      - name: Generate API for v241
+        uses: ./.github/actions/generate-api
+        with:
+          image-tag: v24.1.0
 
       - name: Generate API for v242 (SP5)
         uses: ./.github/actions/generate-api
@@ -199,23 +199,23 @@ jobs:
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
 
-      # - name: Unit Test v23.1.0
-      #   uses: ./.github/actions/unit-test
-      #   with:
-      #     image-tag: v23.1.0
-      #     upload-coverage: false
+      - name: Unit Test v23.1.0
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: v23.1.0
+          upload-coverage: false
 
-      # - name: Unit Test v23.2.0
-      #   uses: ./.github/actions/unit-test
-      #   with:
-      #     image-tag: v23.2.0
-      #     upload-coverage: false
+      - name: Unit Test v23.2.0
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: v23.2.0
+          upload-coverage: false
 
-      # - name: Unit Test v24.1.0
-      #   uses: ./.github/actions/unit-test
-      #   with:
-      #     image-tag: v24.1.0
-      #     upload-coverage: false
+      - name: Unit Test v24.1.0
+        uses: ./.github/actions/unit-test
+        with:
+          image-tag: v24.1.0
+          upload-coverage: false
 
       - name: Unit Test v24.2.0 (SP5)
         uses: ./.github/actions/unit-test
