--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -391,13 +391,16 @@ jobs:
           files: |
             ./**/*.whl
             ./**/*.tar.gz
-            documentation-html 
+            documentation-html
 
   upload_docs_release:
     name: "Upload release documentation"
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: [release]
+    permissions:
+      id-token: write
+      contents: write
     steps:
       - name: Deploy the stable documentation
         uses: ansys/actions/doc-deploy-stable@21c9de9bee9692173780696d4a39964f20b9cfa3 # v10.1.5
