--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -310,6 +310,7 @@ jobs:
           SYC_LAUNCH_CONTAINER: 1
           SYC_IMAGE_TAG: ${{ env.SYC_IMAGE_VERSION }}
           PYFLUENT_LAUNCH_CONTAINER: 1
+          PYFLUENT_CONTAINER_INSECURE_MODE: 1
           FLUENT_IMAGE_TAG: ${{ env.FLUENT_IMAGE_VERSION }}
           PYMAPDL_START_INSTANCE: FALSE
           PYMAPDL_PORT: "50053"
