--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,8 @@ doc = [
 
 	# pyansys dependencies for sphinx gallery examples
 	"ansys-fluent-core==0.35.0",
+	# ... temporary to fix fluent runtime error: 
+	"ansys-units==0.9.1", 
 	"ansys-mapdl-core==0.71.3",
 ]
 style = [
