--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,9 @@ doc = [
 
 	# pyansys dependencies for sphinx gallery examples
 	"ansys-fluent-core==0.35.0",
-	# ... temporary to fix fluent runtime error: 
+	#   Explicit units dependency is to fix fluent runtime error
+	    TODO: try removing sometime - perhaps on next update
+		      of ansys-fluent-core update
 	"ansys-units==0.10.1", 
 	"ansys-mapdl-core==0.71.3",
 ]
