--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,8 +76,8 @@ doc = [
 	# pyansys dependencies for sphinx gallery examples
 	"ansys-fluent-core==0.35.0",
 	#   Explicit units dependency is to fix fluent runtime error
-	    TODO: try removing sometime - perhaps on next update
-		      of ansys-fluent-core update
+	#   TODO: try removing sometime - perhaps on next update
+	#      of ansys-fluent-core update
 	"ansys-units==0.10.1", 
 	"ansys-mapdl-core==0.71.3",
 ]
