--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ doc = [
 	"ansys-fluent-core==0.35.0",
 	#   Explicit units dependency is to fix fluent runtime error
 	#   TODO: try removing sometime - perhaps on next update
-	#      of ansys-fluent-core update
+	#         of ansys-fluent-core
 	"ansys-units==0.10.1", 
 	"ansys-mapdl-core==0.71.3",
 ]
